--- a/config/nginx.sample.conf
+++ b/config/nginx.sample.conf
@@ -2,9 +2,7 @@ upstream davechmura_website-puma {
   server unix:///home/deployer/apps/davechmura_website/shared/tmp/sockets/davechmura_website-puma.sock fail_timeout=0;
 }
 server {
-  listen 80;
-  listen [::]:80;
-  server_name davechmura_website.com;
+  server_name server_name dschmura.com www.dschmura.com www.davechmura.com davechmura.com;
 
   root /home/deployer/apps/davechmura_website/current/public;
   access_log /home/deployer/apps/davechmura_website/current/log/nginx.access.log;
