--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.0-pre.3",
     "babel-minify": "^0.5.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "rails-ujs": "^5.2.1",
     "stimulus": "^1.1.0",
     "turbolinks": "^5.2.0",
+    "vue": "^2.5.17",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
