--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.0-pre.3",
+    "actiontext": "https://github.com/rails/actiontext",
     "babel-minify": "^0.5.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
