--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "rails-ujs": "^5.2.1",
     "stimulus": "^1.1.0",
     "turbolinks": "^5.2.0",
