--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "davechmura_website",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "@rails/webpacker": "^4.0.0-pre.3",
     "actiontext": "https://github.com/rails/actiontext",
-    "babel-minify": "^0.5.0",
+    "babel-minify": "^0.4.3",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.1.3",
+    "caniuse-lite": "^1.0.30000907",
+    "css-loader": "^1.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
-    "@fortawesome/fontawesome-free": "^5.5.0",
+    "postcss-cssnext": "^3.1.0",
     "rails-ujs": "^5.2.1",
     "stimulus": "^1.1.0",
-    "turbolinks": "^5.2.0",
-    "webpack-cli": "^3.1.2"
+    "turbolinks": "^5.1.1",
+    "webpack": "^4.25.1"
   },
   "devDependencies": {
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
 }
