--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "postcss-cssnext": "^3.1.0",
     "rails-ujs": "^5.2.1",
     "stimulus": "^1.1.0",
+    "tailwindcss": "^0.7.3",
     "turbolinks": "^5.1.1",
     "webpack": "^4.25.1"
   },
   "devDependencies": {
+
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
