--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "davechmura_website",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
-    "@rails/webpacker": "^4.0.0-pre.3",
-    "actiontext": "https://github.com/rails/actiontext",
+    "@fortawesome/fontawesome-free": "^5.7.1",
+    "@rails/activestorage": "^6.0.0-alpha",
+    "@rails/ujs": "^6.0.0-alpha",
+    "@rails/webpacker": "^4.0.0-rc.7",
     "babel-minify": "^0.4.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -14,11 +15,9 @@
     "css-loader": "^1.0.1",
     "popper.js": "^1.12.9",
     "postcss-cssnext": "^3.1.0",
-    "rails-ujs": "^5.2.1",
     "stimulus": "^1.1.0",
-    "tailwindcss": "^0.7.3",
-    "turbolinks": "^5.1.1",
-    "webpack": "^4.25.1"
+    "tailwindcss": "^0.7.4",
+    "turbolinks": "^5.1.1"
   },
   "devDependencies": {
     "webpack-cli": "^3.1.2",
