--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -34,7 +34,6 @@ default: &default
     - .woff2
 
   extensions:
-    - .vue
     - .mjs
     - .js
     - .sass
@@ -82,6 +81,9 @@ test:
 
   # Compile test packs to a separate directory
   public_output_path: packs-test
+
+staging:
+  <<: *default
 
 production:
   <<: *default
