--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.1",
+    "@rails/actiontext": "^6.0.0-beta1",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.0-rc.7",
@@ -17,6 +18,7 @@
     "postcss-cssnext": "^3.1.0",
     "stimulus": "^1.1.0",
     "tailwindcss": "^0.7.4",
+    "trix": "^1.0.0",
     "turbolinks": "^5.1.1"
   },
   "devDependencies": {
