UPDATE: Tailwindcss 1.0 beta

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "davechmura_website",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.1",
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@rails/actiontext": "^6.0.0-beta1",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
@@ -17,7 +17,7 @@
     "popper.js": "^1.12.9",
     "postcss-cssnext": "^3.1.0",
     "stimulus": "^1.1.0",
-    "tailwindcss": "^0.7.4",
+    "tailwindcss": "^1.0.0-beta.3",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
